# fullstack-boilerplate

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml
.serena/: project.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2011afb53a5e_add_password_reset_tokens_table.py  2139af8f7490_add_rbac_roles_and_user_hierarchy.py  25c4f153ef1d_add_soft_delete_to_users_and_tasks.py  bd22f1a46a41_add_first_name_last_name_note_to_users.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: admin_rbac.py  audit.py  auth.py  tasks.py  trash.py  uploads.py  users.py
backend/app/core/: celery.py  config.py  database.py  email.py  logging.py  migrations.py  permissions.py  sanitization.py  security.py  tasks.py
backend/app/db/: init_db.py
backend/app/models/: __init__.py  audit_log.py  base.py  password_reset_token.py  role.py  task.py  user.py  user_role.py
backend/app/schemas/: audit.py  auth.py  role.py  task.py  trash.py  user.py
backend/app/services/: audit.py  password_reset.py  rbac.py  trash.py
backend/app/templates/email/: reset_password.html
backend/scripts/: seed_roles.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_security.py  test_users.py
backend/tests/core/: test_security.py
data/: .gitignore
docs/: README.md  architecture.md  authentication.md  deployment.md  development.md  getting-started.md  roadmap.md  (+1 more)
(+41 files in other folders)
